@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <actions>
   <highlight regexp="(mailto:)?[\w!#$%&amp;'*+/=?^`{|}~-]+(\.[\w!#$%&amp;'*+/=?^`{|}~-]+)*@([\w-]+\.)+[\w-]+" name="email-address"/>
-  <highlight regexp="((\+|\b)\d|\(\d+\))(\(\d+\)|[-.pwxPWX# ]?\d+)*" name="phone-number"/>
+  <highlight regexp="((\+ ?)|\b|\(\d+\))(\(\d+\) ?|\d[-.pwxPWX# ]?){2,19}\d" name="phone-number"/>
   <highlight regexp="(https?://)?music\.ovi\.com(/[\w/?%:;@&amp;=+$,\-.!~*'()]*)?" name="ovi-music-url"/>
   <highlight regexp="(https?://|www\.)(\w+((:\w+)?)@)?([\w\-]+\.)+[\w\-]+(:\d+)?(/[\w/?%:;@&amp;=+$,\-.!~*'()]*)?" name="http-url"/>
 
