@@ -6,16 +6,17 @@ normal uri http://foo.bar.ru
 special url http://example.com/quux/323
 
 These should be valid phone numbers:
-1234567
-(303)499-7111
-+13034997111
-303-499-7111
-+1(303)499-7111
-303.499.7111,
-(3034997111)
-+48 123.12-3 123
-+481234p12345
-+481234#12345
+number 1234567 is here
+number (303)499-7111 is here
+number +13034997111 is here
+number 303-499-7111 is here
+number +1(303)499-7111 is here
+number 303.499.7111, is here
+number (3034997111) is here
+number +48 123.12-3 123 is here
+number +481234p12345 is here
+number +481234#12345 is here
+number +358 (9) 123 456 is here
 
 These should be valid web addresses:
 http://us.m.yahoo.com
@@ -33,6 +34,10 @@ These are suspicious phone numbers:
 sometextbefore333222111444sometextafter
 +(((((
 +358+7777
+i bought 13 bananas
+too short phone number: 14
+too long phone number: 141414141414141414141
+but these are ok: 141 and 14141414141414141414
 
 These are suspicious e-mail addresses:
 double@atsign@bar.com
