@@ -1,8 +1,10 @@
 libcontentaction (0.1.33~unreleased) unstable; urgency=low
 
   * QT_NO_KEYWORDS
-
- -- Marja Hassinen <marja.hassinen@nokia.com>  Thu, 07 Oct 2010 11:27:35 +0300
+  * Configuration update: regexp for phone number
+  * Fixes: NB#191300
+  
+ -- Marja Hassinen <marja.hassinen@nokia.com>  Tue, 26 Oct 2010 10:40:19 +0300
 
 libcontentaction (0.1.32) unstable; urgency=low
 
